nobase_pkginclude_HEADERS= \
                corba.h \
                idl4.h \
                macros.h \
		arch/generic/helpers.h \
		arch/ia32/helpers.h \
		arch/ia64/helpers.h \
		arch/alpha/helpers.h \
		arch/mips64/helpers.h \
		arch/arm/helpers.h \
                arch/powerpc/helpers.h \
                glue/v2-generic/runtime.h \
                glue/v2-ia32/runtime.h \
                glue/v4-generic/runtime.h \
                glue/v4-generic/msgbuf.h \
                glue/v4-ia32/runtime.h \
                glue/v4-ia64/runtime.h \
                glue/v4-alpha/runtime.h \
                glue/v4-mips64/runtime.h \
                glue/v4-powerpc/runtime.h \
                glue/x0-generic/runtime.h \
                glue/x0-ia32/runtime.h \
                glue/x0-arm/runtime.h \
                api/v2/interface.h \
                api/x0/interface.h \
                api/v4/interface.h
